--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,4 +7,5 @@ ENV PATH="$MOJO_PATH/bin:$PATH"
 RUN sudo apt-get update
 RUN sudo apt-get install -y clang
 RUN curl -s https://get.modular.com | sh -
+RUN modular auth
 RUN modular install nightly/mojo
