feature(.devcontainer): install nightly build tools via stdlib script

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,10 +5,10 @@ ENV MODULAR_HOME=/home/vscode/.modular
 ENV MOJO_PATH="$MODULAR_HOME/pkg/packages.modular.com_nightly_mojo"
 ENV PATH="$MOJO_PATH/bin:$PATH"
 RUN sudo apt-get update
-RUN sudo apt-get install -y llvm
-RUN sudo apt-get install -y lldb
-RUN sudo mv /usr/bin/FileCheck-14 /usr/bin/FileCheck
+RUN sudo apt-get install -y lsb-release wget software-properties-common gnupg python3-pip
+RUN wget https://raw.githubusercontent.com/modularml/mojo/nightly/stdlib/scripts/install-build-tools-linux.sh
+RUN chmod +x ./install-build-tools-linux.sh
+RUN sudo ./install-build-tools-linux.sh
 RUN curl -s https://get.modular.com | sh -
 RUN modular auth test
 RUN modular install nightly/mojo
-RUN python3 -m pip install lit
